--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -117,18 +117,18 @@ body {
   min-height: 200px; }
 
 .movie {
-  background: #f8d480 url("../images/fond.JPG") no-repeat bottom;
+  background: #faf9f7 url("../images/fond.JPG") no-repeat bottom;
   background-size: 100% auto;
   height: auto;
   min-height: 200px; }
   .movie .row {
     padding: 3% 2%; }
 
-.booking aside {
+  /*.booking aside {
   background: url("../images/05-Image.jpg") no-repeat center;
   background-size: 100% auto;
   height: auto;
-  min-height: 200px; }
+  min-height: 200px; }*/
 
 .form-group {
   position: relative; }
