--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -301,3 +301,25 @@ footer .partenaire ul li{
   font-size: 1rem; }
 
 /*# sourceMappingURL=stylescss.css.map */
+.footerLinks a {
+  color: #ccc;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.footerLinks a:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.socialicons a {
+  color: #fff;
+  font-size: 1.5rem;
+  transition: transform 0.2s;
+}
+
+.socialicons a:hover {
+  transform: scale(1.2);
+  color: #f8c291;
+}
