--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2426,8 +2426,8 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
+  background-color: #207834;
+  border-color: #207834;
 }
 
 .btn-success:hover {
