--- a/css/stylescss_3.css
+++ b/css/stylescss_3.css
@@ -4,7 +4,7 @@ body, html {
 
 body {
   font-family: "Open Sans", sans-serif;
-  color:#1a1a1a;
+  color: #595959;
   position: relative; }
   body h1, body h2 {
     text-transform: uppercase;
@@ -14,21 +14,20 @@ body {
     border-left: 5px solid #e96b55;
     padding-left: 5%;
     margin-bottom: 3%; }
-  body a {
-    color: #e96b55; }
-    body a:hover {
-      color: #5eab99;
+  body a { color: #c31e0c; 
+    }
+    body a:hover { color: #328774;
       text-decoration: none; }
   body .btn-custom {
-    background: transparent;
+    background-color: #1f2c34;
     border: 2px solid #e96b55;
     border-radius: 25px;
-    color: #e96b55;
+    color: #ffffff; background-color: #1a73e8; border-color: #1a73e8;
     font-weight: 600;
     text-transform: uppercase; }
     body .btn-custom:hover {
-      border-color: #1d7c36; ;
-      color: #1d7c36;  }
+      border-color: #5eab99;
+      color: #5eab99; }
   body .container-fluid {
     padding: 0; }
     body .container-fluid aside {
@@ -84,9 +83,12 @@ body {
   min-height: 200px; }
 .welcome article {
   background: #e96b55;
+  text-shadow: 2px 2px 0px #000000;
   color: #fff;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+ 
+}
   .welcome article .date {
     padding: 5% 0 7%; }
     .welcome article .date span {
@@ -95,9 +97,9 @@ body {
       font-weight: 700; }
   .welcome article .textshadow {
     font-size: 4rem;
-    text-shadow: 5px 0px 0px #5eab99; }
+    text-shadow: 2px 2px 0px #000000; color: #ffffff; }
   .welcome article .btn-custom {
-    color: #f0f193;
+    color: #ffffff; background-color: #0056b3; border-color: #0056b3;
     border-color: #f0f193;
     margin-top: 5%; }
     .welcome article .btn-custom:hover {
@@ -161,11 +163,10 @@ footer {
     font-size: 1.5rem; }
   footer .footerLinks a {
     display: block;
-    color: #ffffff;
+    color: #fff; 
     margin-top: 0.5rem;}
     footer .footerLinks a:hover {
-      color: #5eab99;
-      text-decoration: underline; }
+      color: #5eab99; }
   footer .social .socialicons a {
     color: #fff;
     font-size: 1.5rem;
@@ -190,10 +191,6 @@ footer {
 footer .partenaire ul li{
   margin-top: 1rem;
 }
-.footerLinks a:hover {
-  color: #ffffff;
-}
-
 .jumbotron {
   background: #5eab99; }
   .jumbotron span {
@@ -212,7 +209,7 @@ footer .partenaire ul li{
     color: #e96b55;
     margin: 3% 0%; }
   .container-fluid.filmlist span {
-    color: lightgrey;
+    color: #555555;
     padding-right: 2%; }
 
 .film01 aside {
@@ -287,8 +284,7 @@ footer .partenaire ul li{
   height: auto;
   min-height: 200px; }
 
-.infoBlog {
-  color: lightgrey;
+.infoBlog { color: #666666;
   font-size: x-small; }
 
 .card-title {
@@ -306,3 +302,25 @@ footer .partenaire ul li{
   font-size: 1rem; }
 
 /*# sourceMappingURL=stylescss.css.map */
+.footerLinks a {
+  color: #ccc;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.footerLinks a:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.socialicons a {
+  color: #fff;
+  font-size: 1.5rem;
+  transition: transform 0.2s;
+}
+
+.socialicons a:hover {
+  transform: scale(1.2);
+  color: #f8c291;
+}
