--- a/css/stylescss_3.css
+++ b/css/stylescss_3.css
@@ -192,7 +192,7 @@ footer .partenaire ul li{
   margin-top: 1rem;
 }
 .jumbotron {
-  background: #5eab99; }
+  background: #366459; }
   .jumbotron span {
     color: #fff;
     text-transform: uppercase;
