--- a/css/stylescss_3.css
+++ b/css/stylescss_3.css
@@ -324,3 +324,13 @@ footer .partenaire ul li{
   transform: scale(1.2);
   color: #f8c291;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  border: 0;
+}
